// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template article > renders default-params HTML that matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#f4f4f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#f4f4f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <h2
                                      style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:left;word-wrap:break-word;word-break:break-word;font-size:24px;line-height:1.3;font-weight:bold;margin:0">
                                      A note from the team
                                    </h2>
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:left;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                      We have been heads-down on the details
                                      this month: sharper defaults, gentler
                                      onboarding, and dozens of fixes you will
                                      feel rather than see. Here is what changed
                                      and why it matters for your next send.
                                    </p>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`template feature-columns > renders default-params HTML that matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#f4f4f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#f4f4f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="width:33.34%;vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <h3
                                              style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:center;word-wrap:break-word;word-break:break-word;font-size:20px;line-height:1.3;font-weight:bold;margin:0">
                                              Fast
                                            </h3>
                                            <p
                                              style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                              Set up in minutes — no code
                                              required.
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                  <td
                                    data-id="__react-email-column"
                                    style="width:33.33%;vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <h3
                                              style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:center;word-wrap:break-word;word-break:break-word;font-size:20px;line-height:1.3;font-weight:bold;margin:0">
                                              Flexible
                                            </h3>
                                            <p
                                              style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                              Compose prebuilt sections to fit
                                              any campaign.
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                  <td
                                    data-id="__react-email-column"
                                    style="width:33.33%;vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <h3
                                              style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:center;word-wrap:break-word;word-break:break-word;font-size:20px;line-height:1.3;font-weight:bold;margin:0">
                                              On brand
                                            </h3>
                                            <p
                                              style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                              Everything inherits your theme
                                              automatically.
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`template footer > renders default-params HTML that matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#f4f4f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#f4f4f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <hr
                                      style="width:100%;border:none;border-color:transparent;border-top:1px solid #e6e6e6;margin:0" />
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                      <span style="font-size:12px"
                                        ><a
                                          href="https://example.com/privacy"
                                          style="color:#067df7;text-decoration-line:none;text-decoration:underline"
                                          target="_blank"
                                          >Privacy</a
                                        ></span
                                      ><span style="font-size:12px"> · </span
                                      ><span style="font-size:12px"
                                        ><a
                                          href="https://example.com/terms"
                                          style="color:#067df7;text-decoration-line:none;text-decoration:underline"
                                          target="_blank"
                                          >Terms</a
                                        ></span
                                      >
                                    </p>
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                      <span style="font-size:12px"
                                        >Acme Inc. · 123 Market Street, Suite
                                        400, San Francisco, CA</span
                                      >
                                    </p>
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                      <span style="font-size:12px"
                                        ><a
                                          href="*|UNSUB|*"
                                          style="color:#067df7;text-decoration-line:none;text-decoration:underline"
                                          target="_blank"
                                          >Unsubscribe</a
                                        ></span
                                      >
                                    </p>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`template header > renders default-params HTML that matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#f4f4f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#f4f4f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="width:40%;vertical-align:middle;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <img
                                              alt="Acme logo"
                                              src="https://placehold.co/280x80.png"
                                              style="display:block;outline:none;border:none;text-decoration:none;max-width:100%;height:auto;margin-left:0;margin-right:auto"
                                              width="140" />
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                  <td
                                    data-id="__react-email-column"
                                    style="width:60%;vertical-align:middle;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <p
                                              style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:right;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                              <a
                                                href="https://example.com/shop"
                                                style="color:#067df7;text-decoration-line:none;text-decoration:underline"
                                                target="_blank"
                                                >Shop</a
                                              >
                                              ·
                                              <a
                                                href="https://example.com/about"
                                                style="color:#067df7;text-decoration-line:none;text-decoration:underline"
                                                target="_blank"
                                                >About</a
                                              >
                                              ·
                                              <a
                                                href="https://example.com/contact"
                                                style="color:#067df7;text-decoration-line:none;text-decoration:underline"
                                                target="_blank"
                                                >Contact</a
                                              >
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`template hero > renders default-params HTML that matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#f4f4f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#f4f4f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <img
                                      alt="Product preview"
                                      src="https://placehold.co/1200x600.png"
                                      style="display:block;outline:none;border:none;text-decoration:none;max-width:100%;height:auto;margin-left:auto;margin-right:auto" />
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <h1
                                      style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:center;word-wrap:break-word;word-break:break-word;font-size:32px;line-height:1.3;font-weight:bold;margin:0">
                                      Meet the new release
                                    </h1>
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                      Everything you asked for, in one update:
                                      faster setup, smarter defaults, and a
                                      cleaner editing canvas.
                                    </p>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px;text-align:center">
                                    <a
                                      href="https://example.com"
                                      style="line-height:100%;text-decoration:none;display:inline-block;max-width:100%;mso-padding-alt:0px;background-color:#000000;color:#ffffff;border-radius:4px;padding:12px 24px;font-family:Helvetica, Arial, sans-serif;padding-top:12px;padding-right:24px;padding-bottom:12px;padding-left:24px"
                                      target="_blank"
                                      ><span
                                        ><!--[if mso]><i style="mso-font-width:400%;mso-text-raise:18px" hidden>&#8202;&#8202;&#8202;</i><![endif]--></span
                                      ><span
                                        style="max-width:100%;display:inline-block;line-height:120%;mso-padding-alt:0px;mso-text-raise:9px"
                                        >Get started</span
                                      ><span
                                        ><!--[if mso]><i style="mso-font-width:400%" hidden>&#8202;&#8202;&#8202;&#8203;</i><![endif]--></span
                                      ></a
                                    >
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`template image-gallery > renders default-params HTML that matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#f4f4f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#f4f4f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="width:33.34%;vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <img
                                              alt="Workspace with the new editor open"
                                              src="https://placehold.co/600x400.png"
                                              style="display:block;outline:none;border:none;text-decoration:none;max-width:100%;height:auto;margin-left:auto;margin-right:auto" />
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                  <td
                                    data-id="__react-email-column"
                                    style="width:33.33%;vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <img
                                              alt="Close-up of the section catalog"
                                              src="https://placehold.co/600x400.png"
                                              style="display:block;outline:none;border:none;text-decoration:none;max-width:100%;height:auto;margin-left:auto;margin-right:auto" />
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                  <td
                                    data-id="__react-email-column"
                                    style="width:33.33%;vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <img
                                              alt="Finished email on a phone screen"
                                              src="https://placehold.co/600x400.png"
                                              style="display:block;outline:none;border:none;text-decoration:none;max-width:100%;height:auto;margin-left:auto;margin-right:auto" />
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`template stats > renders default-params HTML that matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#f4f4f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#f4f4f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="width:33.34%;vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <h2
                                              style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:center;word-wrap:break-word;word-break:break-word;font-size:24px;line-height:1.3;font-weight:bold;margin:0">
                                              12k+
                                            </h2>
                                            <p
                                              style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                              teams on board
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                  <td
                                    data-id="__react-email-column"
                                    style="width:33.33%;vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <h2
                                              style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:center;word-wrap:break-word;word-break:break-word;font-size:24px;line-height:1.3;font-weight:bold;margin:0">
                                              98%
                                            </h2>
                                            <p
                                              style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                              delivery rate
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                  <td
                                    data-id="__react-email-column"
                                    style="width:33.33%;vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <h2
                                              style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:center;word-wrap:break-word;word-break:break-word;font-size:24px;line-height:1.3;font-weight:bold;margin:0">
                                              4.9/5
                                            </h2>
                                            <p
                                              style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                              average rating
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`template testimonial > renders default-params HTML that matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#f4f4f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#f4f4f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                      <em
                                        >“Tandem has completely changed how our
                                        team ships email. What used to take a
                                        day now takes minutes.”</em
                                      >
                                    </p>
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:center;word-wrap:break-word;word-break:break-word;margin-top:0;margin-bottom:0">
                                      <strong>Jordan Lee</strong>
                                    </p>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;
